--- a/cap12/package.json
+++ b/cap12/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "better-sqlite3": "^12.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
